add get degrees for user api
